--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -7,6 +7,7 @@
              xmlns:st ="clr-namespace:ST.Library.UI.NodeEditor;assembly=ST.Library.UI"
              mc:Ignorable="d" 
              PreviewKeyDown="UserControl_PreviewKeyDown"
+              xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
              xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
              d:DataContext="{d:DesignInstance local:ViewFlow}"
              d:DesignHeight="600" d:DesignWidth="800" Background="{DynamicResource GlobalBackground}" Initialized="UserControl_Initialized" >
@@ -100,10 +101,11 @@
                         <Button Content="查询结果" Click="Button_Click" Margin="0,0,5,0"/>
                         <Button Content="流程结果管理"  Command="{Binding FlowEngineManager.MeasureBatchManagerCommand}"/>
                     </StackPanel>
-
                     <TextBox x:FieldModifier="public"  x:Name="logTextBox" Background="Transparent" TextWrapping="WrapWithOverflow" Height="105" Grid.Row="1" Padding="5,5" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" Margin="0,0,0,5" />
                 </StackPanel>
             </Border>
+
+            <im:ImageView x:Name="ImageView" Grid.Row="1"  Height="200"/>
 
             <Border x:Name="SignStackBorder" Grid.Row="3"  Background="{DynamicResource SecondaryRegionBrush}" Visibility="Collapsed" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="0" Margin="5,0,5,5" CornerRadius="5">
                 <StackPanel x:Name="SignStackPannel"  Orientation="Vertical" Margin="3" >
