--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -126,15 +126,12 @@
 
                 </Border>
 
-                <ToolBar Style="{StaticResource ToolBarBaseStyle}"  Margin="0,2,4,0"  ToolBarTray.IsLocked="True" x:Name="ToolBarTop" x:FieldModifier="public"  VerticalAlignment="Top" Grid.Row="0" Grid.RowSpan="2"  HorizontalAlignment="Center">
+                <ToolBar  x:Name="ToolBarTop" x:FieldModifier="public"  Margin="0,2,4,0"  VerticalAlignment="Top" Grid.Row="0"  HorizontalAlignment="Center">
                     <ToggleButton IsChecked="{Binding ImageEditMode}"  Margin="1,0">
                         <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagedrag}" Margin="-5"/>
                     </ToggleButton>
                     <ToggleButton  IsChecked="{Binding MouseMagnifier.IsShow}" Margin="1,0"  Height="27" Width="27" Padding="3">
                         <Image  Source="{DynamicResource DrawingImageMouse}"/>
-                    </ToggleButton>
-                    <ToggleButton Command="{Binding FullCommand}" Margin="1,0" >
-                        <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageMax}"  Margin="-5"/>
                     </ToggleButton>
                     <TextBox  Background="Transparent" BorderThickness="1"  HorizontalContentAlignment="Center"  Text="{Binding ElementName=Zoombox1,Path=ContentMatrix.M11,StringFormat={}{0:P1}}"/>
                     <ToggleButton IsChecked="{Binding Gridline.IsShow}">
