--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -82,41 +82,15 @@
                     <ComboBox x:Name="ComboxPOITemplate"  x:FieldModifier="public" Width="100" HorizontalAlignment="Left" SelectedValuePath="Value"  DisplayMemberPath="Key"/>
                 </ToolBar>
 
-                <Border  Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}" Padding="2" CornerRadius="5" Background="{DynamicResource SecondaryRegionBrush}"  HorizontalAlignment="Center" VerticalAlignment="Bottom"  Margin="0,0,0,10">
-                    <StackPanel Orientation="Horizontal" x:Name="ToolBarBottom"  >
-                        <ToggleButton  IsChecked="{Binding MeasureManager.IsShow}" Padding="5" Margin="0,0,2,0" >
-                            <Image  Style="{StaticResource ToolBarImage}"  Source="{DynamicResource DrawingImageruler}"/>
-                        </ToggleButton>
-                        <ToggleButton  IsChecked="{Binding EraseManager.IsShow}" Padding="5" Margin="0,0,2,0" Click="Button7_Click">
-                            <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageeraser}"/>
-                        </ToggleButton>
-                        <ToggleButton IsChecked="{Binding CircleManager.IsShow}" Padding="5" Margin="0,0,2,0" >
-                            <Image Source="{DynamicResource DrawingImageCircle}"  />
-                        </ToggleButton>
-                        <ToggleButton IsChecked="{Binding RectangleManager.IsShow}" Padding="5" Margin="0,0,2,0" >
-                            <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageRect}"/>
-                        </ToggleButton>
-                        <ToggleButton IsChecked="{Binding PolygonManager.IsShow}"  Padding="5" Margin="0,0,2,0"  >
-                            <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagePolygon}" />
-                        </ToggleButton>
-                        <ToggleButton IsChecked="{Binding LineManager.IsShow}" Content="L" Width="30"  Padding="5" Margin="0,0,2,0"  />
-
-                        <ToggleButton IsChecked="{Binding TextManager.IsShow}" Content="T" Width="30" Padding="5" Margin="0,0,2,0"  />
-
-
-                        <ToggleButton IsChecked="{Binding BezierCurveManager.IsShow}" Padding="5" Margin="0,0,2,0">
-                            <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagePolygon}" />
-                        </ToggleButton>
-                        <ToggleButton IsChecked="{Binding ToolConcentricCircle.IsShow}" Padding="5" Margin="0,0,2,0">
-                            <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource ConcentricCirclesDrawImg}" />
-                        </ToggleButton>
-  
+                <ToolBarTray x:Name="ToolBarDraw" Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}" HorizontalAlignment="Center" VerticalAlignment="Bottom" >
+                    <ToolBar ToolBarTray.IsLocked="True"  >
                         <Button Click="EditDIExpand_Click" Padding="5"   >
                             <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DIExpand}" />
                         </Button>
-                    </StackPanel>
+                    </ToolBar>
 
-                </Border>
+                </ToolBarTray>
+
                 <ToolBarTray x:Name="ToolBarTop" VerticalAlignment="Top" Grid.Row="0"  HorizontalAlignment="Center">
                     <ToolBar  ToolBarTray.IsLocked="True" Margin="0,2,4,0" >
                         <ToggleButton IsChecked="{Binding ImageEditMode}"  Margin="1,0">
