--- a/ColorVision/Update/ChangeLog/ChangelogWindow.xaml
+++ b/ColorVision/Update/ChangeLog/ChangelogWindow.xaml
@@ -9,6 +9,11 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:ChangelogWindowConfig}"
         Title="{x:Static properties:Resources.ChangeLog}" Background="{StaticResource GlobalBackground}" Height="450" Width="800" Initialized="Window_Initialized">
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -102,10 +107,10 @@
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
                     </GridView>
-                </ListView.View>
+                </ListView.View>      
             </ListView>
             
-            <ScrollViewer x:Name="ChangeLogScrollViewer" Grid.Column="1" Margin="5,0,5,5" VerticalScrollBarVisibility="Auto">
+            <ScrollViewer x:Name="ChangeLogScrollViewer" Grid.Column="1" Background="Transparent" Margin="5,0,5,5" VerticalScrollBarVisibility="Auto">
                 <StackPanel x:Name="ChangeLogDetailsPanel" Margin="10">
                 </StackPanel>
             </ScrollViewer>
