--- a/ColorVision/Update/ChangeLog/ChangelogWindow.xaml
+++ b/ColorVision/Update/ChangeLog/ChangelogWindow.xaml
@@ -75,7 +75,7 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="250"/>
+                <ColumnDefinition Width="270"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             
@@ -107,7 +107,6 @@
             <ListView x:Name="ChangeLogDetailsPanel" Grid.Column="1" Margin="5,0,5,5" 
                       Background="Transparent" BorderThickness="0"
                       ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       SelectionChanged="ChangeLogDetailsPanel_SelectionChanged">
                 <ListView.View>
                     <GridView>
@@ -121,17 +120,17 @@
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate DataType="{x:Type local:ChangeLogEntry}">
                                     <StackPanel Background="Transparent" Margin="0,0,0,20" >
-                                        <TextBox Background="Transparent" Text="{Binding Version, StringFormat='## {0}'}" 
+                                        <TextBox Background="Transparent" PreviewMouseDown="TextBox_PreviewMouseDown" Tag="{Binding .}" Text="{Binding Version, StringFormat='## {0}'}" 
                                        FontSize="18" 
                                        FontWeight="Bold"
                                        BorderThickness="0" IsReadOnly="True" Padding="0"
                                        Margin="0,10,0,5"/>
-                                        <TextBox Background="Transparent" Text="{Binding ReleaseDate, StringFormat='yyyy/MM/dd',Mode=OneWay}" 
+                                        <TextBox Background="Transparent" PreviewMouseDown="TextBox_PreviewMouseDown" Tag="{Binding .}"  Text="{Binding ReleaseDate, StringFormat='yyyy/MM/dd',Mode=OneWay}" 
                                        FontSize="12" 
                                        Foreground="Gray" 
                                        BorderThickness="0" IsReadOnly="True" Padding="0"
                                        Margin="0,0,0,10"/>
-                                        <TextBox Background="Transparent" Text="{Binding ChangeLog ,Mode=OneWay}" BorderThickness="0" IsReadOnly="True" Padding="0"
+                                        <TextBox Background="Transparent" PreviewMouseDown="TextBox_PreviewMouseDown" Tag="{Binding .}"  Text="{Binding ChangeLog ,Mode=OneWay}" BorderThickness="0" IsReadOnly="True" Padding="0"
                                        TextWrapping="Wrap"/>
                                     </StackPanel>
                                 </DataTemplate>
