--- a/Engine/ColorVision.Engine/Templates/TemplateCreate.xaml
+++ b/Engine/ColorVision.Engine/Templates/TemplateCreate.xaml
@@ -8,7 +8,7 @@
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:winf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         mc:Ignorable="d"
-        Title="{x:Static properties:Resources.Create}" Background="{DynamicResource GlobalBackground}" Height="500" Width="400" Initialized="Window_Initialized">
+        Title="{x:Static properties:Resources.Create}" Background="{DynamicResource GlobalBackground}" Height="600" Width="800" Initialized="Window_Initialized">
     <Window.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
@@ -21,35 +21,45 @@
         </Style>
     </Window.Resources>
     <Grid Margin="5">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Border Grid.Row="0" Background ="{DynamicResource RegionBrush}" CornerRadius="4">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <ScrollViewer Grid.Row="0" Margin="2" VerticalScrollBarVisibility="Auto" MaxHeight="150">
-                    <WrapPanel x:Name="TemplateStackPanels" Orientation="Horizontal">
-                    </WrapPanel>
-                </ScrollViewer>
-                <DockPanel Grid.Row="1"  Margin="2" >
-                    <hc:ComboBox x:Name="CreateCode" IsEditable="True" SelectedIndex="0"  hc:InfoElement.ShowClearButton="True"   />
-                </DockPanel>
-
-                <Grid Grid.Row="2" x:Name="GridProperty" Margin="3,5">
-                    <WindowsFormsHost>
-                        <winf:PropertyGrid x:Name="PropertyGrid1" />
-                    </WindowsFormsHost>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="400"/>
+        </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" Background ="{DynamicResource RegionBrush}" CornerRadius="4">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <ScrollViewer Grid.Row="0" Margin="2" VerticalScrollBarVisibility="Auto" MaxHeight="150">
+                        <WrapPanel x:Name="TemplateStackPanels" Orientation="Horizontal">
+                        </WrapPanel>
+                    </ScrollViewer>
+ 
                 </Grid>
-            </Grid>
-        </Border>
+            </Border>
 
-        <Border Grid.Row="1" Height="30">
-            <Button Content="{x:Static properties:Resources.Create}" Foreground="White" Background="{StaticResource PrimaryBrush}"  Click="Button_Click" />
-        </Border>
+            <Border Grid.Row="1">
+                <StackPanel>
+                    <DockPanel Grid.Row="1"  Margin="2" >
+                        <hc:ComboBox x:Name="CreateCode" IsEditable="True" SelectedIndex="0"  hc:InfoElement.ShowClearButton="True"   />
+                    </DockPanel>
+                    <Button Content="{x:Static properties:Resources.Create}" Foreground="White" Background="{StaticResource PrimaryBrush}"  Click="Button_Click" />
+                </StackPanel>
+            </Border>
+        </Grid>
+        <Grid Grid.Column="1" Width="400">
+            <Grid  x:Name="GridProperty" Margin="3,5">
+                <WindowsFormsHost>
+                    <winf:PropertyGrid x:Name="PropertyGrid1" />
+                </WindowsFormsHost>
+            </Grid>
+        </Grid>
+       
     </Grid>
 </Window>
