--- a/Engine/ColorVision.Engine/Templates/POI/AlgorithmImp/DisplayPOI.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/AlgorithmImp/DisplayPOI.xaml
@@ -68,7 +68,7 @@
                         <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Open}" Click="Button_OpenLocal_Click" />
                     </StackPanel>
                 </TabItem>
-                <TabItem Background="Transparent" Header="服务" x:Name="AlgRawSelect" IsSelected="True">
+                <TabItem Background="Transparent" Header="Service" x:Name="AlgRawSelect" IsSelected="True">
                     <StackPanel>
                         <DockPanel Margin="0,2">
                             <TextBlock Text="{x:Static properties:Resources.ImageSource}" Margin="0,0,10,0" Width="40"/>
