--- a/UI/ColorVision.Database/MySqlToolWindow.xaml
+++ b/UI/ColorVision.Database/MySqlToolWindow.xaml
@@ -31,7 +31,7 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="420"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0" Margin="5">
